overlays/production/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  rules:
  - host: api.traveldiscover.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: td-backend
            port:
              number: 8080
  tls:
  - hosts:
    - api.traveldiscover.fr
